--- a/views/admin/partials/sort.view.ejs
+++ b/views/admin/partials/sort.view.ejs
@@ -1,12 +1,33 @@
 <form class="d-flex" id="sort">
   <select name="sort" class="form-control w-75 flex-fill sort-select">
     <option value="" disabled>-- Danh mục sắp xếp --</option>
-    <option class="sort-option" value="position-desc" <% if(sortValue === "position-desc") {%>selected<% } %>>Vị trí giảm dần ⬇</option>
-    <option class="sort-option" value="position-asc" <% if(sortValue === "position-asc") {%>selected<% } %>>Vị trí tăng dần ⬆</option>
-    <option class="sort-option" value="price-asc" <% if(sortValue === "price-asc") {%>selected<% } %>>Giá tăng dần 💵↑</option>
-    <option class="sort-option" value="price-desc" <% if(sortValue === "price-desc") {%>selected<% } %>>Giá giảm dần 💵↓</option>
-    <option class="sort-option" value="title-asc" <% if(sortValue === "title-asc") {%>selected<% } %>>Tiêu đề A - Z 🇦🇿</option>
-    <option class="sort-option" value="title-desc" <% if(sortValue === "title-desc") {%>selected<% } %>>Tiên đề Z - A z🇦</option>
+    <% if (sortValue) { %>
+      <% sortOption.forEach((item) => { %>
+        <option class="sort-option" value="<%= item %>" <% if(sortValue === item) {%>selected<% } %>>
+          <% if(item === 'total-asc' || item === 'price-asc') {%>
+            Giá tăng dần 💵↑
+          <% } else if(item === 'total-desc' || item === 'price-desc') {%>
+            Giá giảm dần 💵↓
+          <% } else if (item === 'orderCode-asc') { %>
+            Mã đơn hàng A - Z 🇦🇿
+          <% } else if (item === 'orderCode-desc') { %>
+            Mã đơn hàng Z - A z🇦
+          <% } else if (item === 'position-asc') { %>
+            Vị trí tăng dần ⬆
+          <% } else if (item === 'position-desc') { %>
+            Vị trí giảm dần ⬇
+          <% } else if (item === 'title-asc') { %>
+            Tiêu đề A - Z 🇦🇿
+          <% } else if (item === 'title-desc') { %>
+            Tiên đề Z - A z🇦
+          <% } else if (item === 'createdAt-asc') { %>
+            Ngày tạo tăng dần
+          <% } else if (item === 'createdAt-desc') { %>
+            Ngày tạo giảm dần
+          <% } %>
+        </option>
+      <% }) %>
+    <% } %>
   </select>
   <button type="submit" class="btn btn-primary ms-1 sort-clear">
     <i class="bi bi-eraser"></i>
