--- a/views/client/pages/auth/forgotPasswordOtp.view.ejs
+++ b/views/client/pages/auth/forgotPasswordOtp.view.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%-include('../../partials/seo-meta.view.ejs', { pageTitle: pageTitle}) %>
+    <%-include('../../partials/seoMeta.view.ejs', { pageTitle: pageTitle}) %>
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
@@ -23,7 +23,7 @@
     <!-- End Styles Library & Framework Link -->
   </head>
   <body>
-    <%-include('../../partials/alert-message.view.ejs') %>
+    <%-include('../../partials/alertMessage.view.ejs') %>
 
     <main class="main">
       <div class="w-100 py-5 px-4 d-flex justify-content-center align-items-center otp">
