--- a/views/admin/pages/product/product.view.ejs
+++ b/views/admin/pages/product/product.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-    
+
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -32,8 +32,9 @@
           <div class="col-lg-8 col-md-4 col-12">
             <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
           </div>
+
           <div class="col-lg-4 col-md-6 col-12">
-            <%-include("../../partials/search.view.ejs") %>
+            <%-include("../../partials/search.view.ejs", { placeholder: "Nhập tên sản phẩm..."}) %>
           </div>
         </div>
 
@@ -55,6 +56,7 @@
             </div>
           </div>
         </div>
+
         <div class="card mb-3">
           <div class="title-font card-header">
             Danh sách (trang hiện tại: <%= objPagination.currentPage %>)
@@ -66,7 +68,10 @@
                   <%-include("../../partials/changeMulti.view.ejs", {url: 'products', type:
                   'product'}) %>
                 </div>
-                <div class="col-lg-4 col-12"><%-include("../../partials/sort.view.ejs") %></div>
+                <div class="col-lg-4 col-12">
+                  <%-include("../../partials/sort.view.ejs", {sortOption: ['position-asc',
+                  'position-desc', 'price-asc', 'price-desc', 'title-asc', 'title-desc']}) %>
+                </div>
                 <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes('product-add')) {%>
                   <a
@@ -136,21 +141,26 @@
                         </td>
                         <td><%= item.title %></td>
                         <td>
-                          <b style="color: var(--error-color-admin)"
+                          <b class="fw-bold" style="color: var(--error-color-admin)"
                             ><i
                               ><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency:
                               'VND' }).format(Number.parseFloat(item.price - (item.price / 100 *
                               item.discount))) %></i
                             >
                           </b>
-                          | Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency',
-                          currency: 'VND' }).format(item.price) %>
+                          <span class="text-decoration-line-through"
+                            ><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                            }).format(item.price) %></span
+                          >
                         </td>
                         <td>
-                          <p><%= item.accountFullNameCreate%></p>
+                          <p>
+                            <i class="fa-solid fa-user me-1"></i><%= item.accountFullNameCreate%>
+                          </p>
                           <% if(item.accountFullNameCreate) { %>
                           <p>
-                            <%= moment(item.createdBy.createdAt).format('DD/MM/YYYY - h:mm:ss')%>
+                            <i class="fa-solid fa-clock me-1"></i><%=
+                            moment(item.createdBy.createdAt).format('DD/MM/YYYY - h:mm:ss')%>
                           </p>
                           <% } else { %>
                           <p>Không tìm thấy</p>
@@ -158,8 +168,14 @@
                         </td>
                         <td>
                           <% let updatedBy = item.updatedBy.slice(-1)[0] %> <% if(updatedBy) { %>
-                          <p><%= updatedBy.accountFullNameUpdate %></p>
-                          <p><%= moment(updatedBy.updatedAt).format('DD/MM/YYYY - h:mm:ss')%></p>
+                          <p>
+                            <i class="fa-solid fa-user me-1"></i><%= updatedBy.accountFullNameUpdate
+                            %>
+                          </p>
+                          <p>
+                            <i class="fa-solid fa-clock me-1"></i><%=
+                            moment(updatedBy.updatedAt).format('DD/MM/YYYY - h:mm:ss')%>
+                          </p>
                           <% } else { %>
                           <p>Không tìm thấy</p>
                           <% } %>
@@ -262,14 +278,14 @@
     <script src="/admin/scripts/sidebarToggle.js"></script>
     <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/statusFilter.js"></script>
-    <script src="/admin/scripts/product/search.js"></script>
+    <script src="/admin/scripts/search.js"></script>
     <script src="/admin/scripts/pagination.js"></script>
     <script src="/admin/scripts/displayModalConfirm.js"></script>
     <script src="/admin/scripts/changeStatus.js"></script>
     <script src="/admin/scripts/product/priceFilter.js"></script>
     <script src="/admin/scripts/delete.js"></script>
     <script src="/admin/scripts/changeMulti.js"></script>
-    <script src="/admin/scripts/product/sort.js"></script>
+    <script src="/admin/scripts/sort.js"></script>
     <script src="/admin/scripts/showAlert.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
