--- a/views/admin/partials/search.view.ejs
+++ b/views/admin/partials/search.view.ejs
@@ -4,7 +4,7 @@
       type="text"
       name="keyword"
       value="<%= keyword %>"
-      placeholder="Nhập tiêu đề"
+      placeholder="<%= placeholder  %>"
       class="form-control input-search"
     />
     <div class="input-group-append">
