--- a/views/admin/partials/statusFilter.view.ejs
+++ b/views/admin/partials/statusFilter.view.ejs
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-start column-gap-2">
+<div class="d-flex justify-content-start flex-wrap gap-2">
   <% activeStatus.forEach(btnActive => { %>
   <button
     class="btn btn-outline-primary btn-sm flex-grow-1 <%= btnActive.class %>"
