--- a/views/client/pages/auth/registerVerify.view.ejs
+++ b/views/client/pages/auth/registerVerify.view.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%-include('../../partials/seo-meta.view.ejs', { pageTitle: pageTitle}) %>
+    <%-include('../../partials/seoMeta.view.ejs', { pageTitle: pageTitle}) %>
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
