--- a/views/client/pages/product/productDetail.view.ejs
+++ b/views/client/pages/product/productDetail.view.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%-include('../../partials/seo-meta.view.ejs', { pageTitle: pageTitle}) %>
+    <%-include('../../partials/seoMeta.view.ejs', { pageTitle: pageTitle}) %>
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
@@ -40,10 +40,10 @@
     </style>
   </head>
   <body>
-    <%-include('../../partials/alert-message.view.ejs') %>
+    <%-include('../../partials/alertMessage.view.ejs') %>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: '',
     aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' });
-    %> <%-include("../../partials/header-mobile.view.ejs") %>
+    %> <%-include("../../partials/headerMobile.view.ejs") %>
 
     <main class="main">
       <!-- Prroduct detail -->
