complete search filter for order list ui admin

--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -34,7 +34,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 col-12">
-            
+            <%-include("../../partials/search.view.ejs", { placeholder: "Nhập mã đơn hàng..."}) %>  
           </div>
         </div>
 
@@ -244,6 +244,7 @@
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
     <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/search.js"></script>
     <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
