complete status filter for order list ui admin

--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -44,7 +44,7 @@
             <div class="container-fluid">
               <div class="row gap-md-0 gap-2">
                 <div class="col-12">
-                  
+                  <%-include("../../partials/statusFilter.view.ejs") %>
                 </div>
                 <!-- <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"> -->
                   <%#-include("../../partials/priceFilter.view.ejs") %>
@@ -244,6 +244,7 @@
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
     <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/statusFilter.js"></script>
     <script src="/admin/scripts/search.js"></script>
     <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
