--- a/views/admin/partials/sort.view.ejs
+++ b/views/admin/partials/sort.view.ejs
@@ -21,9 +21,9 @@
           <% } else if (item === 'title-desc') { %>
             Tiên đề Z - A z🇦
           <% } else if (item === 'createdAt-asc') { %>
-            Ngày tạo tăng dần
+            Ngày tạo cũ đến mới
           <% } else if (item === 'createdAt-desc') { %>
-            Ngày tạo giảm dần
+            Ngày tạo mới đến cũ
           <% } %>
         </option>
       <% }) %>
